fix height input type on safari

--- a/public/view/form/form.css
+++ b/public/view/form/form.css
@@ -22,7 +22,7 @@
     padding-left: 3px;
 }
 
-input[type='date'] {
+input[type='date'], input[type='time'] {
     height: 42px;
 }
 
